--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
+    "build:href":"ng build --base-href ./",
+    "build:github":"npm run delete:docs && npm run build:href && npm run move:browser",
+    "delete:docs":"rmdir /s /q docs",
+    "move:browser":"move dist\\bases\\browser . && rename browser docs",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
